--- a/index.html
+++ b/index.html
@@ -231,13 +231,14 @@
         <div class="card card-compact p-9 bg-base-100 shadow-xl border border-[#DEDEDE]">
           <figure><img class="w-36" src="./images/user-1.png" alt="Shoes" /></figure>
           <div class="card-body">
-            <p class="text-center text-[#6C6C6C] leading-6">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+            <p class="text-center text-[#6C6C6C] leading-6">Slate helps you see how many more days you need to work to
+              reach your financial goal for the month and year.</p>
 
             <div class="rating justify-center mt-2">
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"  />
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked/>
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
             </div>
 
@@ -252,13 +253,14 @@
         <div class="card card-compact p-9 bg-base-100 shadow-xl border border-[#DEDEDE]">
           <figure><img class="w-36" src="./images/user-2.png" alt="Shoes" /></figure>
           <div class="card-body">
-            <p class="text-center text-[#6C6C6C] leading-6">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+            <p class="text-center text-[#6C6C6C] leading-6">Slate helps you see how many more days you need to work to
+              reach your financial goal for the month and year.</p>
 
             <div class="rating justify-center mt-2">
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"  />
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked/>
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
             </div>
 
@@ -273,13 +275,14 @@
         <div class="card card-compact p-9 bg-base-100 shadow-xl border border-[#DEDEDE]">
           <figure><img class="w-36" src="./images/user-3.png" alt="Shoes" /></figure>
           <div class="card-body">
-            <p class="text-center text-[#6C6C6C] leading-6">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+            <p class="text-center text-[#6C6C6C] leading-6">Slate helps you see how many more days you need to work to
+              reach your financial goal for the month and year.</p>
 
             <div class="rating justify-center mt-2">
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"  />
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked/>
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
             </div>
 
@@ -292,8 +295,98 @@
       </div>
     </section>
     <!-- happy_client_end -->
+
+    <!-- FAQ_start -->
+    <section class="mt-28">
+      <h2 class="text-[#0A0826] text-center text-5xl font-semibold">Frequently Asked<span class="text-[#E76F51]">
+          Questions</span></h2>
+
+      <div class="hero mt-12">
+        <div class="hero-content flex-col lg:gap-24 lg:flex-row">
+          <img src="./logo/faq.png" class="w-1/2 lg:max-w-sm rounded-lg mt-5 md:mt-0 lg:mt-0" />
+
+          <div>
+            <!-- first_question -->
+            <div class="collapse collapse-arrow border border-[#D5E5FB]">
+              <input type="radio" name="my-accordion-2" checked="checked" />
+              <div class="collapse-title text-xl font-medium">
+                <h2 class="text-[#383838] text-xl font-medium">What are the most important things I should know about
+                  riding a bike?</h2>
+              </div>
+              <div class="collapse-content">
+                <p class="text-[#7E848C]">Safety First! Always obey the rules of the road. Obey all traffic signals,
+                  signs, and laws. Get in
+                  the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused
+                  and legally compliant bike rider. </p>
+              </div>
+            </div>
+
+            <!-- second_question -->
+            <div class="collapse collapse-arrow border border-[#D5E5FB] mt-3">
+              <input type="radio" name="my-accordion-2" />
+              <div class="collapse-title text-xl font-medium">
+                <h2 class="text-[#383838] text-xl font-medium">How can I tell if my helmet is old and I need a new one?
+                </h2>
+              </div>
+              <div class="collapse-content">
+                <p class="text-[#7E848C]">After 6 months you need to change the old helmet.</p>
+              </div>
+            </div>
+
+            <!-- third_question -->
+            <div class="collapse collapse-arrow border border-[#D5E5FB] mt-3">
+              <input type="radio" name="my-accordion-2" />
+              <div class="collapse-title text-xl font-medium">
+                <h2 class="text-[#383838] text-xl font-medium">My bike has been in storage is it safe to ride?</h2>
+              </div>
+              <div class="collapse-content">
+                <p class="text-[#7E848C]">No,Servicing Please.</p>
+              </div>
+            </div>
+
+            <!-- fourth_question -->
+            <div class="collapse collapse-arrow border border-[#D5E5FB] mt-3">
+              <input type="radio" name="my-accordion-2" />
+              <div class="collapse-title text-xl font-medium">
+                <h2 class="text-[#383838] text-xl font-medium">What rules should I follow when riding my bikes?</h2>
+              </div>
+              <div class="collapse-content">
+                <p class="text-[#7E848C]">Safety</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- FAQ_end -->
   </main>
-  <footer></footer>
+  <!-- footer_start -->
+  <footer class="footer p-10 bg-[#0B0D17] justify-around  mt-4 md:mt-24 lg:mt-28">
+    <aside>
+      <div class="text-[#FFF] flex gap-5 leading-7">
+        <p>Download Now</p>
+        <p>License</p>
+      </div>
+
+      <div class="grid grid-cols-3 lg:grid-cols-6 lg:gap-6 text-[#FFF] leading-7">
+        <p>About</p>
+        <p>Features</p>
+        <p>Pricing</p>
+        <p>Careers</p>
+        <p>Help</p>
+        <p>Privacy Policy</p>
+      </div>
+      <p class="leading-6 text-[#D9DBE1] text-sm">© 2024 Bike Shop. All rights reserved</p>
+    </aside>
+    <nav>
+      <header class="footer-title text-[#D9DBE1]">Get the App</header>
+      <div class="grid grid-flow-row gap-3">
+        <a><img class="w-36" src="./logo/android.png" alt=""></a>
+        <a><img class="w-36" src="./logo/ios.png" alt=""></a>
+      </div>
+    </nav>
+  </footer>
+  <!-- footer_end -->
 </body>
 
 </html>
