--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
 
 <body class="font-poppins">
-  <header class="md:container md:mx-auto">
+  <header class="md:max-w-7xl md:mx-auto">
     <!-- nav_start -->
     <nav>
       <div class="navbar bg-base-100">
@@ -169,7 +169,7 @@
     <!-- banner_end -->
   </header>
 
-  <main class="md:container md:mx-auto">
+  <main class="md:max-w-7xl md:mx-auto">
     <!-- featured_bike_start -->
     <section class="mt-12 md:mt-20 lg:mt-28">
       <h3 class="text-5xl text-[#0A0826] font-semibold text-center font-poppins">Fetured Bikes In This Year</h3>
